# ChangeLog for x11-themes/gtk-engines-xfce
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.191 2015/08/05 11:01:33 perfinion Exp $

  05 Aug 2015; Jason Zaman <perfinion@gentoo.org> metadata.xml:
  Replace herd with xfce@g.o

  25 Jul 2015; Pacho Ramos <pacho@gentoo.org>
  gtk-engines-xfce-3.2.0-r200.ebuild, gtk-engines-xfce-3.2.0-r300.ebuild:
  ppc stable wrt bug #553500

  19 Jul 2015; Tobias Klausmann <klausman@gentoo.org>
  gtk-engines-xfce-3.2.0-r300.ebuild:
  Stable on alpha, bug 553500

  19 Jul 2015; Tobias Klausmann <klausman@gentoo.org>
  gtk-engines-xfce-3.2.0-r200.ebuild:
  Stable on alpha, bug 553500

  12 Jul 2015; Jeroen Roovers <jer@gentoo.org>
  gtk-engines-xfce-3.2.0-r200.ebuild, gtk-engines-xfce-3.2.0-r300.ebuild:
  Stable for PPC64 (bug #553500).

  11 Jul 2015; Markus Meier <maekke@gentoo.org>
  gtk-engines-xfce-3.2.0-r200.ebuild:
  arm stable, bug #553500

  11 Jul 2015; Markus Meier <maekke@gentoo.org>
  gtk-engines-xfce-3.2.0-r300.ebuild:
  arm stable, bug #553500

  01 Jul 2015; Mikle Kolyada <zlogene@gentoo.org>
  gtk-engines-xfce-3.2.0-r200.ebuild, gtk-engines-xfce-3.2.0-r300.ebuild:
  amd64 stable wrt bug #553500

  01 Jul 2015; Mikle Kolyada <zlogene@gentoo.org>
  gtk-engines-xfce-3.2.0-r200.ebuild, gtk-engines-xfce-3.2.0-r300.ebuild:
  x86 stable wrt bug #553500

  01 Jul 2015; Jeroen Roovers <jer@gentoo.org>
  gtk-engines-xfce-3.2.0-r200.ebuild, gtk-engines-xfce-3.2.0-r300.ebuild:
  Stable for HPPA (bug #553500).

*gtk-engines-xfce-3.2.0-r200 (08 Mar 2015)
*gtk-engines-xfce-3.2.0-r300 (08 Mar 2015)

  08 Mar 2015; Michał Górny <mgorny@gentoo.org>
  +gtk-engines-xfce-3.2.0-r200.ebuild, +gtk-engines-xfce-3.2.0-r300.ebuild:
  Xfce 4.12 version bump, bug #541962. https://github.com/gentoo/gentoo-portage-
  rsync-mirror/pull/63 by me and damex.

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> gtk-engines-xfce-3.0.1-r201.ebuild: