@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/gtk-engines-xfce
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.191 2015/08/05 11:01:33 perfinion Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.192 2015/08/06 14:38:42 zlogene Exp $
+
+  06 Aug 2015; Mikle Kolyada <zlogene@gentoo.org>
+  gtk-engines-xfce-3.0.1-r200.ebuild, gtk-engines-xfce-3.2.0-r200.ebuild,
+  gtk-engines-xfce-3.2.0-r300.ebuild:
+  ia64 stable wrt bug #553500
 
   05 Aug 2015; Jason Zaman <perfinion@gentoo.org> metadata.xml:
   Replace herd with xfce@g.o
